tests/ui/duplicate-enum-source.stderr
error: duplicate #[source] attribute
 --> tests/ui/duplicate-enum-source.rs:8:9
  |
8 |         #[source]
  |         ^^^^^^^^^

error[E0277]: `ErrorEnum` doesn't implement `std::fmt::Display`
 --> tests/ui/duplicate-enum-source.rs:4:10
  |
4 | pub enum ErrorEnum {
  |          ^^^^^^^^^ `ErrorEnum` cannot be formatted with the default formatter
  |
  = help: the trait `std::fmt::Display` is not implemented for `ErrorEnum`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
note: required by a bound in `std::error::Error`
 --> $RUST/core/src/error.rs
  |
  | pub trait Error: Debug + Display {
  |                          ^^^^^^^ required by this bound in `Error`
